# OpenPagingServer

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  active_broadcast_store.py  analyticsd.py  belld.py  broadcasts.py  clientd.py  endpoints.py  group_features.py  index.py  livepaged.py  messaged.py  msgsendprototype.py  multicast_gateway.rar  multicastgatewayd.py  pyproject.toml  requirements.txt  sendmsgd.py  tts.py  webd.py
endpoint-modules/: enabled.txt  index.py
endpoint-modules/ciscosep/: index.py  message_send.py
endpoint-modules/siptrunks/: delete.php  delete.py  edit.php  index.py  info.xml  web-edit.py  web.py
multicast_gateway/: client.py  legacy_client.py  lib.py  runtime.py
scripts/: database-initialization.py  newuser.py
sip/: audio_utils.py  auth.py  index.py  rtp.py
sip/audio/: thesefilesaretemporary.md
sip/triggers/: echotest.py  message.py  paging.py  testtone.py
srv/api/: app.py
srv/web/: app.py  config.py  demomode.html
web/: dashboard.php  index.php
web/.errors/: 404.html  503-update.html
web/admin/: delete-endpoint.php  edit-endpoint.php  endpoint-action-frame.php  endpoint-action-page.php  endpoint-form-frame.php  endpoint-module-settings-configure.php  endpoint-module-settings-frame.php  endpoint-module-settings.php  manage-endpoints.php  manage-groups.php  manage-users.php  new-endpoint-configure.php  new-endpoint.php
web/assets/: index.php  sidebar-brand.css
web/bells/: bell-lists.php  bell_helpers.php  calendar.php  devices.php  edit.php  groups.php  index.php  lists.php  new.php  time.php
(+85 files in other folders)
