[project]
name = "OpenPagingServer"
version = "0.2.0"
description = "Open Paging Server is a free & open source public address, bell, and mass notification system that runs on existing VoIP infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyMySQL",
    "python-dotenv",
    "mysql-connector-python",
    "flask",
    "waitress"
]
